dataset1235/2025-2/1955397009/users/2021828639/executions/1686127217_4190502342.log
== SUBMISSION (2025-08-12 13:13:47)
-- CODE: 
pritn(180/4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pritn(180/4)
    ^^^^^
NameError: name 'pritn' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pritn(180/4)
    ^^^^^
NameError: name 'pritn' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:14:09)
-- CODE: 
print("180/4")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
180/4
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
180/4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:14:17)
-- CODE: 
print(180/4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:13:57)
-- CODE: 
pritn("180/4")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pritn("180/4")
    ^^^^^
NameError: name 'pritn' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pritn("180/4")
    ^^^^^
NameError: name 'pritn' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 13:14:18)
-- CODE: 
print(180/4)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
